<resources>
    <string name="app_name" translatable="false">Spoilerd</string>
    <string name="select_image_saf_button">Select image (SAF)</string>
    <string name="delete_cache">Delete cache</string>
    <string name="grant_permission">Grant permission</string>
    <string name="grant_permission_ftom_settings">Grant permission from settings</string>
    <string name="open_settings">Opent settings</string>
    <string name="cache_deleted">Cache deleted</string>
    <string name="permission_is_not_granted">Permission is not granted</string>
    <string name="discord_is_not_installed">Discord is not installed</string>
    <string name="app_info">App info</string>
    <string name="title_activity_app_info" translatable="false">AppInfoActivity</string>
    <string name="made_by" translatable="false">Made by riku1227</string>
    <string name="relationship_affiliated">This app is not affiliated / relationship with Discord Inc.</string>
    <string name="website_button">Website</string>
    <string name="oss_licence">Open source licence</string>
    <string name="title_activity_osslicence">OSSLicenceActivity</string>
    <string name="check_update">Check update</string>
    <string name="update_available">Update available</string>
    <string name="current_version">Current version</string>
    <string name="update_version">Update version</string>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="view_changelog_button">View changelog</string>
    <string name="network_is_not_connected">Network is not connected</string>
    <string name="wifi_is_not_connected">Wi-Fi is not connected</string>
    <string name="app_is_latest_version">The app is the latest version</string>
    <string name="app_version_info">Version info</string>
    <string name="app_version">App Version: %1$s (%2$s)</string>
    <string name="signature_type">Signature: %1$s</string>
    <string name="shortcut_select_image_saf">Select image(SAF)</string>
    <string translatable="false" name="title_activity_settings">Settings</string>
    <string name="app_settings">Settings</string>
    <string name="auto_update_check">Auto update check</string>
    <string name="update_check_on_wifi_only">Wi-Fi only</string>
    <string name="update_check_on_wifi_only_summary">Auto update check on Wi-Fi connected only</string>
</resources>
